Removed dependence on Bootstrapper class so can run in gwt shell for debugging.  Also, fixed vertical spacing bug on two of the tab panels.

--- a/src/workbench/org/meandre/workbench/public/Main.css
+++ b/src/workbench/org/meandre/workbench/public/Main.css
@@ -174,3 +174,8 @@ div#componentshow {
   background-color: #e8eef7;
 }
 
+.no-vert-padding {
+  padding-top: 0cm;
+  padding-bottom: 0cm;
+}
+
